Feat: 여가 찜 삭제
